--- a/project-DaDaTa.html
+++ b/project-DaDaTa.html
@@ -9,7 +9,7 @@
 	<!-- Basic Page Needs
 	================================================== -->
 	<meta charset="utf-8">
-	<title>Jake Elwes - DaDaDa Ta</title>
+	<title>Jake Elwes - dada da ta</title>
 	<meta name="description" content=".">
 	<meta name="author" content="Jake Elwes">
 
@@ -80,11 +80,11 @@
 					<div class="desktop-6 tablet-12 columns">
 
 						<div class="box-info">
-							<h3 class="border-top">DaDaDa Ta</h3>
+							<h3 class="border-top">dada da ta</h3>
 							<p class="project-desc">2016, Digital Video, 20 minute loop
 </p>
 
-							<p>In DaDaDa Ta over 50 hours of interviews have been sourced from YouTube then processed using the IBM Watson AI speech to text programme to transcribe the interviews and a custom-made computer programme to extract in time order the instances of the participants speaking in numbers and then remove the words from the source videos – leaving the interview’s chronology intact yet reduced to a stream of numbers: <br><br> “One, one billion, one million, one hundred million, two billion, one, two hundred, ten thousand, eighteen thousand, two, two, two, ten, fifteen, nine thousand.” Elon Musk.
+							<p>In 'dada da ta' over 50 hours of interviews have been sourced from YouTube then processed using the IBM Watson AI speech to text programme to transcribe the interviews and a custom-made computer programme to extract in time order the instances of the participants speaking in numbers and then remove the words from the source videos – leaving the interview’s chronology intact yet reduced to a stream of numbers: <br><br> “One, one billion, one million, one hundred million, two billion, one, two hundred, ten thousand, eighteen thousand, two, two, two, ten, fifteen, nine thousand.” Elon Musk.
 </p>
 						</div><!-- // .box-info -->
 
@@ -104,7 +104,7 @@
 				<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 
 				<iframe id="vid" src="https://player.vimeo.com/video/197342884?color=ffffff&title=0&byline=0&portrait=0" width="100%" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-<small>2 minute extract from Dadada Ta 2017</small>
+<small>2 minute extract from dada da ta 2017</small>
 				<script>
 					function resizeDivs() {
 						$('#vid').css("height", $('#vid').width()/1.7777);
