--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 					<div class="item">
 						<img src="images/project-DaDaTa.jpg" alt="" />
 
-						<h3>DaDaDa Ta</h3>
+						<h3>dada da ta</h3>
 						<span class="category">2016</span>
 					</div><!-- // .item -->
 				</div><!-- // .desktop-4 -->
