--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 	================================================== -->
 	<meta charset="utf-8">
 	<title>Jake Elwes</title>
-	<meta name="description" content="Artworks by Jake Elwes - investigating the role of technology in modern life. Jake is a UK based new media/digital artist. He is currently a student studying Fine Art Media at the Slade, UCL.">
+	<meta name="description" content="Artworks by Jake Elwes - investigating the role of technology in modern life. Jake is a UK based new media/digital artist. A recent graduate of the Slade UCL, Bloomberg New Contemporaries Artist & currently working with The Artists' Development Agency.">
 	<meta name="author" content="Jake Elwes">
 
 	<!-- Mobile Specific Metas
