text changes and pdf

--- a/about.html
+++ b/about.html
@@ -138,7 +138,7 @@
 			<div class="desktop-12 tablet-12 columns" >
 				<p style="margin-top:0px;">Jake Elwes explores both Fine Art and Digital Code, often embracing the overlap between the two. Recent projects look at how we interact with technology and Artificial Intelligence.
 					Jake is currently currently working with Steve Fletcher at <a id=show target="_blank" href="https://www.theartistsdevelopmentagency.org">The Artist Development Agency</a>, and showing in <a id=show target="_blank" href="http://www.newcontemporaries.org.uk/artists/jake-elwes"> Bloomberg New Contemporaries 2017.</a></p>
-
+Download: <a id=show target="_blank" href="JElwes-Portfolio.pdf">WORKS PDF</a> | <a id=show target="_blank" href="cv.pdf">CV PDF</a>
 			</div>
 		</div><!-- // .container -->
 
@@ -176,8 +176,11 @@
 						<div class="desktop-9 tablet-6 columns">
 							<h4>Group Shows</h4>
 							<p>
+							2018 – Open Codes. Living in Digital Worlds, ZKM | Center for Art and Media Karlsruhe, Goethe Institute, Mumbai <br>
+							2018 – Bloomberg New Contemporaries, Block336, London<br>
+							2018 – I am here to learn: For the mechanical interpretation of the world, Frankfurter Kunstverein, Germany <br>
 							2017 - Stars of AI, Life 3.0 with Max Tegmark, Turing Lecture Theatre, Institute of Technology &amp; Engineering, London<br>
-							2017 - <a id=show target="_blank" href="http://www.newcontemporaries.org.uk/artists/jake-elwes"> Bloomberg New Contemporaries</a>, Newcastle &amp; London <br>
+							2017 - <a id=show target="_blank" href="http://www.newcontemporaries.org.uk/artists/jake-elwes"> Bloomberg New Contemporaries</a>, BALTIC Centre for Contemporary Art, Newcastle  <br>
 							2017 - >when machines are dreaming<, Chaos Computer Club (CCC) Datenspuren, Technische Sammlungen, Dresden <br>
 							2017 - Ars Electronica,<a id=show target="_blank" href="https://www.aec.at/ai/en/media-art-between-natural-and-artificial-intelligence/"> A.I. Projects Exhibition</a>, <a id=show target="_blank" href="https://www.aec.at/ai/en/artificial-intimacy/">Artificial Intimacy Exhibition</a> &amp; <a id=show target="_blank" href="https://www.aec.at/ai/en/ars-electronica-gallery-spaces/">TADA Gallery Space</a>,<a id=show target="_blank" href="https://www.aec.at/ai/en/"> Ars Electronica Festival: Artificial Intelligence</a>, POSTCITY Linz, Austria <br>
 							2017 - <a id=show target="_blank" href="https://www.mobiliar.ch/die-mobiliar/engagement/kunst-und-kultur/ausstellungen-und-fuehrungen/kunst-und-nachhaltigkeit-vol-8"> Digital/Real – How Art Surfs Between Worlds</a>, Mobiliar Headquarters, Bern, Switzerland <br>
@@ -208,7 +211,7 @@
 
 
 
-					<!-- <div class="item">
+					<div class="item">
 						<div class="desktop-3 tablet-6 columns">
 							<p></p>
 
@@ -217,15 +220,15 @@
 						<div class="desktop-9 tablet-6 columns">
 							<h4>Prizes</h4>
 							<p>
-								2017 - <a id=show href="http://lumenprize.com/artwork/latent-space"> Lumen Prize Student Prize Nominee</a> <br>
-								2017 - Slade School of Art Julian Sullivan Prize for outstanding achievement in Media Art <br>
-								2012 - Awarded Top UK Result in Fine Art (Cambridge International Examinations)<br>
+								UCL Arts & Humanities Dean’s List, 2017; <br>
+								Julian Sullivan Prize for outstanding achievement in Media Art, 2017; <br>
+								Highest Pre-U Result in Fine Art UK (A Level, Cambridge International Examinations), 2012<br>
 
 						</p>
 						</div>
 
 						<div class="clear"></div>
-					</div>-->
+					</div>
 
 
 					<div class="item">
@@ -262,7 +265,24 @@
 						<div class="clear"></div>
 					</div><!-- // .item -->
 
+					<div class="item">
+						<div class="desktop-3 tablet-6 columns">
+							<p></p>
 
+						</div>
+
+						<div class="desktop-9 tablet-6 columns">
+							<h4>Articles</h4>
+							<p>
+								Febuary 2017, <a id=show target="_blank" href="https://www.timeout.com/london/news/go-see-these-future-art-superstars-at-bloomberg-new-contemporaries-020118#post-author">Go see these future art superstars at Bloomberg New Contemporaries</a>; TimeOut (London). <br>
+								"This JavaScript program reads out tweets within a two mile radius of the gallery in a strangled, garbled computerised voice, like someone is choking an Macbook. It’s both banal and terrifying."<br>
+								September 2017, <a id=show target="_blank" href="https://futurezone.at/digital-life/porno-bilder-aus-der-maschine-zeigen-sexuelle-fantasien/286.010.267">Porn pictures from the machine show sexual fantasies</a>, Futurezone (Austria).
+
+						</p>
+						</div>
+
+						<div class="clear"></div>
+					</div>
 
 					<div class="item">
 						<div class="desktop-3 tablet-6 columns">
