--- a/index.html
+++ b/index.html
@@ -295,13 +295,7 @@
 
 			<div class="clear hide-under-tablet"></div>
 
-
-
-
-
-
-
-
+			<!-- Download: <a id=show target="_blank" href="JElwes-Portfolio.pdf">WORKS PDF</a> | <a id=show target="_blank" href="cv.pdf">CV PDF</a> -->
 
 		</div><!-- // .container -->
 	</section><!-- // section#works -->
@@ -310,6 +304,7 @@
 
 
 	<nav id="footer"></nav>
+
 
 
 
