--- a/project-MLPorn.html
+++ b/project-MLPorn.html
@@ -9,7 +9,7 @@
 	<!-- Basic Page Needs
 	================================================== -->
 	<meta charset="utf-8">
-	<title>Jake Elwes - Machine learning porn</title>
+	<title>Jake Elwes - Machine Learning Porn</title>
 	<meta name="description" content=".">
 	<meta name="author" content="Jake Elwes">
 	<meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' http://* 'unsafe-inline'; script-src 'self' http://* 'unsafe-inline' 'unsafe-eval'" />
@@ -85,7 +85,8 @@
 							<h3 class="border-top">Machine learning porn</h3>
 							<p class="project-desc">2016, digital video, 12 minute loop</p>
 							<p>
-							Inspiration from <a id="show" href="http://gabgoh.github.io">Gabriel Goh</a>.<br>A convolutional neural network (shown thousands of images to teach itself to classify) has been trained using Yahoo’s explicit content model for finding pornography in their search engines, which is then back engineered to generate pornography from scratch .
+							Inspiration from <a id="show" href="http://gabgoh.github.io">Gabriel Goh</a>.<br>A convolutional neural network, an AI, was trained using Yahoo’s explicit content model for identifying pornography, which learnt by being fed a database of thousands of graphic images. The neural network was then re-engineered to generate pornography from scratch.
+<br>Machine Learning Porn is a 12 minute looped film that records the AI’s pornographic fantasies.
 						</p>
 						</div><!-- // .box-info -->
 
