--- a/project-digitalWhisper.html
+++ b/project-digitalWhisper.html
@@ -85,7 +85,8 @@
 							<p class="project-desc">2016, mixed media (raspberry pi computer, LCD screen, speaker and custom program), 60x50x10 cm
 </p>
 <p>
-Tweets in a 2 mile radius of the pieces’ installation are whispered by the computer as a live performance.
+
+Tweets in a 2 mile radius of the pieces’ installation are displayed on an LCD screen while the computer simultaneously whispers the tweets as a live performance.
 
 </p>					</div><!-- // .box-info -->
 
