--- a/project-pornCircles.html
+++ b/project-pornCircles.html
@@ -85,7 +85,7 @@
 
 </p>
 
-							<p>Average colour (emanating outwards from the start of the clip) for the 10 most viewed pornographic videos on the internet.
+							<p>Each concentric circle represents the average colour (emanating outwards from the start of the clip) for the 10 most viewed pornographic videos on the internet.
 </p>
 						</div><!-- // .box-info -->
 
