--- a/project-circuit.html
+++ b/project-circuit.html
@@ -84,7 +84,7 @@
 							<p class="project-desc">2015, Relief &amp; Intaglio Prints, 30x40cm
 </p>
 <p>
-Relief &amp; Intaglio prints made directly from circuit board surfaces. The circuit boards were prepared by burning to remove components then run through a printing press. They evoke scotched terrain and media archeology.
+Relief &amp; Intaglio prints made directly from circuit board surfaces. The circuit boards were prepared by burning to remove components then run through a printing press.
 </p>
 						</div><!-- // .box-info -->
 
