--- a/project-digitalTouch.html
+++ b/project-digitalTouch.html
@@ -81,9 +81,9 @@
 
 						<div class="box-info">
 							<h3 class="border-top">Digital Caress</h3>
-							<p class="project-desc">2015, large format inkjet prints &amp; book, somerset paper, 110x60cm</p>
+							<p class="project-desc">2015, large format inkjet prints on aluminium sheet, 110x60cm</p>
 
-							<p>These gestures are the residue left on the screen of an iPhone from human touch (the grease of one’s finger). The gestures and twitches were often recognisable according to the app eg. Tinder.app - swiping left and right, and Phone.app - imprint from stubble. Each image derives from a different app, displaying the material remnants of interacting with a virtual window.
+							<p>These gestures are the residue left on the screen of an iPhone from human touch (the grease of one’s finger). The gestures and twitches are often recognisable according to the app. For example, the swiping left and right of Tinder, and the imprint from stubble from a phone call. Each image derives from a different app, displaying the material remnants of interacting with a virtual window.
 </p>
 						</div><!-- // .box-info -->
 
