--- a/about.html
+++ b/about.html
@@ -138,7 +138,7 @@
 			<div class="desktop-12 tablet-12 columns" >
 				<p style="margin-top:0px;">Jake Elwes explores both Fine Art and Digital Code, often embracing the overlap between the two. Recent projects look at how we interact with technology and Artificial Intelligence.
 					Jake is currently currently working with Steve Fletcher at <a id=show target="_blank" href="https://www.theartistsdevelopmentagency.org">The Artist Development Agency</a>, and showing in <a id=show target="_blank" href="http://www.newcontemporaries.org.uk/artists/jake-elwes"> Bloomberg New Contemporaries 2017.</a></p>
-Download: <a id=show target="_blank" href="JElwes-Portfolio.pdf">WORKS PDF</a> | <a id=show target="_blank" href="cv.pdf">CV PDF</a>
+<br>Download: <a id=show target="_blank" href="JElwes-Portfolio.pdf">WORKS PDF</a> | <a id=show target="_blank" href="cv.pdf">CV PDF</a>
 			</div>
 		</div><!-- // .container -->
 
@@ -222,7 +222,7 @@ Download: <a id=show target="_blank" href="JElwes-Portfolio.pdf">WORKS PDF</a> |
 							<p>
 								UCL Arts & Humanities Dean’s List, 2017; <br>
 								Julian Sullivan Prize for outstanding achievement in Media Art, 2017; <br>
-								Highest Pre-U Result in Fine Art UK (A Level, Cambridge International Examinations), 2012<br>
+								<!-- Highest Pre-U Result in Fine Art UK (A Level, Cambridge International Examinations), 2012<br> -->
 
 						</p>
 						</div>
@@ -243,7 +243,7 @@ Download: <a id=show target="_blank" href="JElwes-Portfolio.pdf">WORKS PDF</a> |
 							&#9717; Latent Spaces, Dirty Datasets &amp; Autonomous Art - <b>Art &amp; Technology: Vienna</b>, September 2017 <br>
 							&#9718; <b>Ars Electronica</b>, AI Project Spaces: Artist Workshops - Postcity, Linz, Austria, September 2017 <br>
 							&#9719; Machine Learning &amp; Art - London Creative Coding, March 2017 - <a id=show target="_blank" href="https://www.youtube.com/embed/acjDB1kodms">Youtube Video </a>&amp;<a id=show target="_blank" href="ldncc2017.pdf"> Slides PDF</a> <br>
-							&#9716; Creative applications of Artificial Intelligence - UCL, December 2016 <br>
+							<!-- &#9716; Creative applications of Artificial Intelligence - UCL, December 2016 <br> -->
 
 									</p>
 							<!-- <iframe id="vid" width="100%" height="100%" src="https://www.youtube.com/embed/acjDB1kodms" frameborder="0" allowfullscreen></iframe> -->
