--- a/about.html
+++ b/about.html
@@ -138,7 +138,7 @@
 			<div class="desktop-12 tablet-12 columns" >
 				<p style="margin-top:0px;">Jake Elwes explores both Fine Art and Digital Code, often embracing the overlap between the two. Recent projects look at how we interact with technology and Artificial Intelligence.
 					Jake is currently currently working with Steve Fletcher at <a id=show target="_blank" href="https://www.theartistsdevelopmentagency.org">The Artist Development Agency</a>, and showing in <a id=show target="_blank" href="http://www.newcontemporaries.org.uk/artists/jake-elwes"> Bloomberg New Contemporaries 2017.</a></p>
-<br>Download: <a id=show target="_blank" href="JElwes-Portfolio.pdf">WORKS PDF</a> | <a id=show target="_blank" href="cv.pdf">CV PDF</a>
+<br>Download: <a id=show target="_blank" href="JElwes-Portfolio.pdf">WORKS PDF</a> | <a id=show target="_blank" href="JElwes-CV.pdf">CV PDF</a>
 			</div>
 		</div><!-- // .container -->
 
