--- a/about.html
+++ b/about.html
@@ -274,8 +274,8 @@
 						<div class="desktop-9 tablet-6 columns">
 							<h4>Articles</h4>
 							<p>
-								Febuary 2017, <a id=show target="_blank" href="https://www.timeout.com/london/news/go-see-these-future-art-superstars-at-bloomberg-new-contemporaries-020118#post-author">Go see these future art superstars at Bloomberg New Contemporaries</a>; TimeOut (London). <br>
-								"This JavaScript program reads out tweets within a two mile radius of the gallery in a strangled, garbled computerised voice, like someone is choking an Macbook. It’s both banal and terrifying."<br>
+								January 2018 <a id=show target="_blank" href="https://www.standard.co.uk/go/london/arts/bloomberg-new-contemporaries-2018-6-new-artists-you-need-to-know-about-a3760956.html">Bloomberg New Contemporaries 2018: 6 new artists you need to know about</a>; Evening Standard. <br>
+								Febuary 2018, <a id=show target="_blank" href="https://www.timeout.com/london/news/go-see-these-future-art-superstars-at-bloomberg-new-contemporaries-020118#post-author">Go see these future art superstars at Bloomberg New Contemporaries</a>; TimeOut (London). <br>
 								September 2017, <a id=show target="_blank" href="https://futurezone.at/digital-life/porno-bilder-aus-der-maschine-zeigen-sexuelle-fantasien/286.010.267">Porn pictures from the machine show sexual fantasies</a>, Futurezone (Austria).
 
 						</p>
