--- a/about.html
+++ b/about.html
@@ -177,8 +177,8 @@
 							<h4>Group Shows</h4>
 							<p>
 							2018 – Open Codes. Living in Digital Worlds, ZKM | Center for Art and Media Karlsruhe, Goethe Institute, Mumbai <br>
-							2018 – Bloomberg New Contemporaries, Block336, London<br>
-							2018 – I am here to learn: For the mechanical interpretation of the world, Frankfurter Kunstverein, Germany <br>
+							2018 – <a id=show target="_blank" href="http://block336.com/exhibitions/bloomberg-new-contemporaries-2017/Bloomberg"> New Contemporaries, Block336</a>, London<br>
+							2018 – <a id=show target="_blank" href="https://www.fkv.de/de/content/i-am-here-to-learn-zur-maschinellen-interpretation-der-welt"> I am here to learn: For the mechanical interpretation of the world, Frankfurter Kunstverein</a>, Germany <br>
 							2017 - Stars of AI, Life 3.0 with Max Tegmark, Turing Lecture Theatre, Institute of Technology &amp; Engineering, London<br>
 							2017 - <a id=show target="_blank" href="http://www.newcontemporaries.org.uk/artists/jake-elwes"> Bloomberg New Contemporaries</a>, BALTIC Centre for Contemporary Art, Newcastle  <br>
 							2017 - >when machines are dreaming<, Chaos Computer Club (CCC) Datenspuren, Technische Sammlungen, Dresden <br>
