--- a/news.html
+++ b/news.html
@@ -186,10 +186,16 @@ For the first time the national touring exhibition will launch at BALTIC Centre 
 
 			<div class="desktop-4 tablet-6 columns">
 				<div class="box-content">
-<a class="twitter-timeline" data-width="100%" data-height="500" data-theme="light" data-link-color="#19CF86" href="https://twitter.com/JakeElwes">Tweets by JakeElwes</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
-<small>Instagram</small>
+<!-- <small>Instagram</small> -->
 
-			<!-- LightWidget WIDGET --><script src="//lightwidget.com/widgets/lightwidget.js"></script><iframe src="//lightwidget.com/widgets/503c8527b41d5553851fe94f626ee0a6.html" scrolling="yes" allowtransparency="true" class="lightwidget-widget" style="width: 100%; border: 0; overflow: hidden;"></iframe>
+			<!-- LightWidget WIDGET <script src="//lightwidget.com/widgets/lightwidget.js"></script><iframe src="//lightwidget.com/widgets/503c8527b41d5553851fe94f626ee0a6.html" scrolling="yes" allowtransparency="true" class="lightwidget-widget" style="width: 100%; border: 0; overflow: hidden;"></iframe>-->
+
+			<!-- InstaWidget -->
+			<!-- InstaWidget -->
+		<a href="https://instawidget.net/v/user/jakeelwes" id="link-262e67976584f45ccec89836866f7b8f6695c518469bc5b61e10f0534cd26968">@jakeelwes</a>
+		<script src="https://instawidget.net/js/instawidget.js?u=262e67976584f45ccec89836866f7b8f6695c518469bc5b61e10f0534cd26968&width=100%"></script>
+		<a class="twitter-timeline" data-width="100%" data-height="500" data-theme="light" data-link-color="#19CF86" href="https://twitter.com/JakeElwes">Tweets by JakeElwes</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+
 		</div><!-- // .box-content -->
 	</div><!-- // .desktop-9 -->
 
