--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 					<li><a target="_blank" href="https://www.twitter.com/jakeelwes/" class="btn-social btn-outline"><i class="fa fa-fw fa-twitter"></i></a></li>
 					<li><a target="_blank" href="https://vimeo.com/jakeelwes" class="btn-social btn-outline"><i class="fa fa-fw fa-vimeo"></i></a></li>
 					<li><a target="_blank" href="https://www.linkedin.com/in/jake-elwes-40692a6b" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a></li>
-					<li><a target="_blank" href="mailto:contaxct@jakxeelwesx.coxm?Subject=Contact" onmouseover="this.href=this.href.replace(/x/g,'');" target="_top" class="btn-social btn-outline"><i class="fa fa-fw fa-envelope-o"></i></a></li>
+					<li><a href="mailto:contaxct@jakxeelwesx.coxm?Subject=Contact" onmouseover="this.href=this.href.replace(/x/g,'');" target="_top" class="btn-social btn-outline"><i class="fa fa-fw fa-envelope-o"></i></a></li>
 					<!-- <li><a href="https://lab.jakeelwes.com" class="btn-social btn-outline">STUDIO</i></a></li> -->
 				</ul><!-- // #social -->
 
