--- a/lab.html
+++ b/lab.html
@@ -11,7 +11,7 @@
 	<meta charset="utf-8">
 	<title>Jake Elwes - Lab</title>
 	<meta name="description" content="Artworks by Jake Elwes - investigating the role of technology in modern life. Jake is a UK based new media/digital artist. He is currently a student studying Fine Art Media at the Slade, UCL.">
-	<meta name="author" content="Jake Elwes">
+	<meta name=s"author" content="Jake Elwes">
 
 	<!-- Mobile Specific Metas
 	================================================== -->
