--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 			<a href="project-latentSpace.html" class="permalink">
 				<div class="desktop-4 tablet-6 columns">
 					<div class="item">
-						<img src="images/project-latentSpace.jpg" alt="" />
+						<img src="images/project-latentSpace.jpg" alt="Jake Elwes digital artist" />
 
 						<h3>Latent Space</h3>
 						<span class="category">2017</span>
@@ -167,7 +167,7 @@
 			<a href="project-closedLoop.html" class="permalink">
 				<div class="desktop-4 tablet-6 columns">
 					<div class="item">
-						<img src="images/project-closedLoop.jpg" alt="" />
+						<img src="images/project-closedLoop.jpg" alt="Jake Elwes digital artist" />
 
 						<h3>Closed Loop</h3>
 						<span class="category">2017</span>
@@ -178,7 +178,7 @@
 			<a href="project-DaDaTa.html" class="permalink">
 				<div class="desktop-4 tablet-6 columns">
 					<div class="item">
-						<img src="images/project-DaDaTa.jpg" alt="" />
+						<img src="images/project-DaDaTa.jpg" alt="Jake Elwes digital artist" />
 
 						<h3>dada da ta</h3>
 						<span class="category">2016</span>
@@ -194,7 +194,7 @@
 			<a href="project-digitalWhisper.html" class="permalink">
 				<div class="desktop-4 tablet-6 columns">
 					<div class="item">
-						<img src="images/project-digitalWhisper.jpg" alt="" />
+						<img src="images/project-digitalWhisper.jpg" alt="Jake Elwes digital artist" />
 
 						<h3>Digital Whispers</h3>
 						<span class="category">2016</span>
@@ -206,7 +206,7 @@
 			<a href="project-AutoEncodedBuddha.html" class="permalink">
 				<div class="desktop-4 tablet-6 columns">
 					<div class="item">
-						<img src="images/project-AutoEncodedBuddha.jpg" alt="" />
+						<img src="images/project-AutoEncodedBuddha.jpg" alt="Jake Elwes digital artist" />
 
 						<h3>Auto-Encoded Buddha</h3>
 						<span class="category">2016</span>
@@ -217,7 +217,7 @@
 			<a href="project-MLPorn.html" class="permalink">
 				<div class="desktop-4 tablet-6 columns">
 					<div class="item">
-						<img src="images/project-MLPorn.jpg" alt="" />
+						<img src="images/project-MLPorn.jpg" alt="Jake Elwes digital artist" />
 
 						<h3>Machine Learning Porn</h3>
 						<span class="category">2016</span>
@@ -233,7 +233,7 @@
 			<a href="project-digitalTouch.html" class="permalink">
 				<div class="desktop-4 tablet-6 columns">
 					<div class="item">
-						<img src="images/project-digitalTouch.jpg" alt="" />
+						<img src="images/project-digitalTouch.jpg" alt="Jake Elwes digital artist" />
 
 						<h3>Digital Caress</h3>
 						<span class="category">2015</span>
@@ -245,7 +245,7 @@
 			<a href="project-circuit.html" class="permalink">
 				<div class="desktop-4 tablet-6 columns">
 					<div class="item">
-						<img src="images/project-circuit.jpg" alt="" />
+						<img src="images/project-circuit.jpg" alt="Jake Elwes digital artist" />
 
 						<h3>Solid State</h3>
 						<span class="category">2015</span>
@@ -256,7 +256,7 @@
 			<a href="project-iPhoneTouch.html" class="permalink">
 		<div class="desktop-4 tablet-6 columns">
 			<div class="item">
-				<img src="images/project-iPhoneTouch.jpg" alt="" />
+				<img src="images/project-iPhoneTouch.jpg" alt="Jake Elwes digital artist" />
 
 				<h3>Behind The Screen</h3>
 				<span class="category">2015</span>
@@ -272,7 +272,7 @@
 			<a href="project-pornCircles.html" class="permalink">
 				<div class="desktop-4 tablet-6 columns">
 					<div class="item">
-						<img src="images/project-pornCircles.jpg" alt="" />
+						<img src="images/project-pornCircles.jpg" alt="Jake Elwes digital artist" />
 
 						<h3>Porn Saturation</h3>
 						<span class="category">2015</span>
@@ -284,7 +284,7 @@
 			<a href="project-lineForWalk.html" class="permalink">
 				<div class="desktop-4 tablet-6 columns">
 					<div class="item">
-						<img src="images/project-lineForWalk.jpg" alt="" />
+						<img src="images/project-lineForWalk.jpg" alt="Jake Elwes digital artist" />
 
 						<h3>Taking a Phone for a Walk</h3>
 						<span class="category">2015</span>
