--- a/about.html
+++ b/about.html
@@ -174,9 +174,31 @@
 						</div><!-- // .desktop-3 -->
 
 						<div class="desktop-9 tablet-6 columns">
+							<h4>Current/Upcoming Shows</h4>
+							<p>
+							2018 - 15 Aug to 15 Sept – <a id=show target="_blank" href="http://naturemorte.com/exhibitions/gradientdescent-upcomingexhibition/"> Gradient Descent</a>, Nature Morte, Delhi, India<br>
+							2018-19 - 01 Sept to 06 Jan – <a id=show target="_blank" href="https://open-codes.zkm.de/en"> Open Codes - Living in Digital Worlds</a>,  ZKM | Center for Art and Media, Karlsruhe, Germany<br>
+							2018-19 - 13 Sept to 23 Sept - <a id=show target="_blank" href="https://lumenprize.com/event/lumen-at-brighton-digital-festival/"> Uncommon Natures (Lumen Art Prize)</a>, Brighton Digital Festival, Phoenix Theatre, Brighton, UK<br>
+						</p>
+
+									</div><!-- // .desktop-6 -->
+						<div class="clear"></div>
+					</div><!-- // .item -->
+
+
+
+
+					<div class="item">
+						<div class="desktop-3 tablet-6 columns">
+							<p></p>
+
+						</div>
+
+						<div class="desktop-9 tablet-6 columns">
+
 							<h4>Group Shows</h4>
 							<p>
-							2018 – Open Codes. Living in Digital Worlds, ZKM | Center for Art and Media Karlsruhe, Goethe Institute, Mumbai <br>
+							2018 – Open Codes. Living in Digital Worlds, ZKM | Center for Art and Media, Goethe Institute, Mumbai <br>
 							2018 – <a id=show target="_blank" href="http://block336.com/exhibitions/bloomberg-new-contemporaries-2017/Bloomberg"> New Contemporaries, Block336</a>, London<br>
 							2018 – <a id=show target="_blank" href="https://www.fkv.de/de/content/i-am-here-to-learn-zur-maschinellen-interpretation-der-welt"> I am here to learn: For the mechanical interpretation of the world, Frankfurter Kunstverein</a>, Germany <br>
 							2017 - Stars of AI, Life 3.0 with Max Tegmark, Turing Lecture Theatre, Institute of Technology &amp; Engineering, London<br>
@@ -274,7 +296,8 @@
 						<div class="desktop-9 tablet-6 columns">
 							<h4>Articles</h4>
 							<p>
-								January 2018 <a id=show target="_blank" href="https://www.standard.co.uk/go/london/arts/bloomberg-new-contemporaries-2018-6-new-artists-you-need-to-know-about-a3760956.html">Bloomberg New Contemporaries 2018: 6 new artists you need to know about</a>; Evening Standard. <br>
+								August 2018, <a id=show target="_blank" href="https://www.thehindu.com/sci-tech/technology/gradient-descent-when-artificial-intelligence-meets-art-641/article24677618.ece">Gradient Descent - When Artificial Intelligence Meets Art</a>; The Hindu. <br>
+								January 2018, <a id=show target="_blank" href="https://www.standard.co.uk/go/london/arts/bloomberg-new-contemporaries-2018-6-new-artists-you-need-to-know-about-a3760956.html">Bloomberg New Contemporaries 2018: 6 new artists you need to know about</a>; Evening Standard. <br>
 								Febuary 2018, <a id=show target="_blank" href="https://www.timeout.com/london/news/go-see-these-future-art-superstars-at-bloomberg-new-contemporaries-020118#post-author">Go see these future art superstars at Bloomberg New Contemporaries</a>; TimeOut (London). <br>
 								September 2017, <a id=show target="_blank" href="https://futurezone.at/digital-life/porno-bilder-aus-der-maschine-zeigen-sexuelle-fantasien/286.010.267">Porn pictures from the machine show sexual fantasies</a>, Futurezone (Austria).
 
