--- a/about.html
+++ b/about.html
@@ -178,7 +178,7 @@
 							<p>
 							2018 - 15 Aug to 15 Sept – <a id=show target="_blank" href="http://naturemorte.com/exhibitions/gradientdescent-upcomingexhibition/"> Gradient Descent</a>, Nature Morte, Delhi, India<br>
 							2018-19 - 01 Sept to 06 Jan – <a id=show target="_blank" href="https://open-codes.zkm.de/en"> Open Codes - Living in Digital Worlds</a>,  ZKM | Center for Art and Media, Karlsruhe, Germany<br>
-							2018-19 - 13 Sept to 23 Sept - <a id=show target="_blank" href="https://lumenprize.com/event/lumen-at-brighton-digital-festival/"> Uncommon Natures (Lumen Art Prize)</a>, Brighton Digital Festival, Phoenix Theatre, Brighton, UK<br>
+							2018-19 - 13 Sept to 23 Sept - <a id=show target="_blank" href="https://brightondigitalfestival.co.uk/events/lumen-prize-exhibition"> Uncommon Natures (Lumen Art Prize)</a>, Brighton Digital Festival, Phoenix Theatre, Brighton, UK<br>
 						</p>
 
 									</div><!-- // .desktop-6 -->
