--- a/about.html
+++ b/about.html
@@ -176,9 +176,10 @@
 						<div class="desktop-9 tablet-6 columns">
 							<h4>Current/Upcoming Shows</h4>
 							<p>
+							2018 - 22 Sept to 23 Sept – <a id=show target="_blank" href="https://www.vam.ac.uk/event/6YVLW34q/digital-design-weekend-2018-ldf"> Digital Design Weekend</a>, Victoria and Albert Museum, London, UK<br>
+							2018/19 - 01 Sept to 06 Jan – <a id=show target="_blank" href="https://open-codes.zkm.de/en"> Open Codes - Living in Digital Worlds</a>,  ZKM | Center for Art and Media, Karlsruhe, Germany<br>
+							2018 - 13 Sept to 23 Sept - <a id=show target="_blank" href="https://brightondigitalfestival.co.uk/events/lumen-prize-exhibition"> Uncommon Natures (Lumen Art Prize)</a>, Brighton Digital Festival, Phoenix Theatre, Brighton, UK<br>
 							2018 - 15 Aug to 15 Sept – <a id=show target="_blank" href="http://naturemorte.com/exhibitions/gradientdescent-upcomingexhibition/"> Gradient Descent</a>, Nature Morte, Delhi, India<br>
-							2018-19 - 01 Sept to 06 Jan – <a id=show target="_blank" href="https://open-codes.zkm.de/en"> Open Codes - Living in Digital Worlds</a>,  ZKM | Center for Art and Media, Karlsruhe, Germany<br>
-							2018-19 - 13 Sept to 23 Sept - <a id=show target="_blank" href="https://brightondigitalfestival.co.uk/events/lumen-prize-exhibition"> Uncommon Natures (Lumen Art Prize)</a>, Brighton Digital Festival, Phoenix Theatre, Brighton, UK<br>
 						</p>
 
 									</div><!-- // .desktop-6 -->
@@ -296,6 +297,14 @@
 						<div class="desktop-9 tablet-6 columns">
 							<h4>Articles</h4>
 							<p>
+
+								August 2018, <a id=show target="_blank" href="https://news.artnet.com/exhibitions/ai-generated-art-gallery-show-1339445">AI-Generated Art Just Got Its First Mainstream Gallery Show. See It Here—and Get Ready</a>; Artnet. <br>
+								August 2018, <a id=show target="_blank" href="docs/FT - An AI genre in its infancy questions the nature of art _ Financial Times.pdf">An AI genre in its infancy questions the nature of art</a>; Financial Times. <br>
+								August 2018, <a id=show target="_blank" href="https://www.firstpost.com/life/indias-first-exhibition-of-art-created-by-artificial-intelligence-raises-questions-about-human-conscience-5068561.html/amp">India's first exhibition of art created by Artificial Intelligence raises questions about human conscience</a>; Firstpost. <br>
+								August 2018, <a id=show target="_blank" href="https://www.thehindu.com/entertainment/art/the-poetics-of-metonymy/article24769019.ece">The poetics of metonymy</a>; The Hindu. <br>
+								August 2018, <a id=show target="_blank" href="https://www.livemint.com/AI/GUhjytNccrVRTrMCYknjaI/Inside-Indias-first-AI-art-show.html">Inside India’s first AI art show</a>; livemint. <br>
+								August 2018, <a id=show target="_blank" href="https://www.artmarket.guru/le-journal/market/ai-creating-new-genre/">Artificial Intelligence (AI) - Creating a New Genre in Art</a>; Art Market. <br>
+								August 2018, <a id=show target="_blank" href="http://www.forbesindia.com/aperture/slideshow/artificial-intelligence-art-parenting-a-new-genre/51059/1">Artificial Intelligence Art: Parenting a new genre</a>; Forbes, India. <br>
 								August 2018, <a id=show target="_blank" href="https://www.thehindu.com/sci-tech/technology/gradient-descent-when-artificial-intelligence-meets-art-641/article24677618.ece">Gradient Descent - When Artificial Intelligence Meets Art</a>; The Hindu. <br>
 								January 2018, <a id=show target="_blank" href="https://www.standard.co.uk/go/london/arts/bloomberg-new-contemporaries-2018-6-new-artists-you-need-to-know-about-a3760956.html">Bloomberg New Contemporaries 2018: 6 new artists you need to know about</a>; Evening Standard. <br>
 								Febuary 2018, <a id=show target="_blank" href="https://www.timeout.com/london/news/go-see-these-future-art-superstars-at-bloomberg-new-contemporaries-020118#post-author">Go see these future art superstars at Bloomberg New Contemporaries</a>; TimeOut (London). <br>
