news nature morte:

--- a/news.html
+++ b/news.html
@@ -149,6 +149,30 @@
               Jake is joining <a id=show href="project-DaDaTa.html">the Artist Development Agency</a>.
             </p> -->
 
+						<blockquote>
+							<p class="quote" style="margin-top:0px;">Gradient Descent, Nature Morte, Dehli</p>
+							<footer>August 2018</footer>
+						</blockquote>
+						<img src="images/news/naturemorte1.jpg" width="48%" alt="Jake Elwes digital artist" />
+						<img src="images/news/naturemorte2.jpg" width="48%" alt="Jake Elwes digital artist" />
+						<img src="images/news/naturemorte3.jpg" width="31.5%" alt="Jake Elwes digital artist" />
+						<img src="images/news/naturemorte4.jpg" width="31.5%" alt="Jake Elwes digital artist" />
+						<img src="images/news/naturemorte5.jpg" width="31.5%" alt="Jake Elwes digital artist" />
+						<img src="images/news/naturemorte6.jpg" width="31.5%" alt="Jake Elwes digital artist" />
+						<img src="images/news/naturemorte7.jpg" width="31.5%" alt="Jake Elwes digital artist" />
+						<img src="images/news/naturemorte8.jpg" width="31.5%" alt="Jake Elwes digital artist" />
+
+
+						<p> I had the pleasure of exhibiting in a group show at one of Indias foremost contemporary art galleries - <a id=show target="_blank" href="http://naturemorte.com/exhibitions/gradientdescent/"> Nature Morte</a> in Dehli. The show featured works created entirely by Artificial Intelligence in collaboration with seven international artists: <a id=show target="_blank" href="http://harshitagrawal.com/"> Harshit Agrawal, </a><a id=show target="_blank" href="http://www.memo.tv/"> Memo Akten, Jake Elwes, </a><a id=show target="_blank" href="http://quasimondo.com/"> Mario Klingemann, </a><a id=show target="_blank" href="http://annaridler.com/"> Anna Ridler, </a><a id=show target="_blank" href="http://naotokui.net/"> Nao Tokui, and </a><a id=show target="_blank" href="https://www.victoria.ac.nz/design/about/staff/tom-white"> Tom White.</a> <br>
+<a id=show target="_blank" href="http://naturemorte.com/exhibitions/gradientdescent/">‘Gradient Descent’</a> was curated by <a id=show target="_blank" href="https://www.64bar1.com/"> 64/1</a>, an art curation and research collective focused on building public understanding of how artists and artificial intelligence can come together to create art for the post-human age. 64/1 was founded by Raghava KK and Karthik Kalyanaraman out of Bangalore, India. <br>
+I had an wonderful week meeting Indian politicians, officials, artists and academics. I spoke on a panel about my art process and collaborating with a machine at an INK talk (Indian equivalent of TED). It was such a pleasure to be invited out by Raghava and Karthik having discussions with them and the other artists about our inspirations and the future. <br><br>
+Press: <a id=show target="_blank" href="https://news.artnet.com/exhibitions/ai-generated-art-gallery-show-1339445"> Artnet, </a><a id=show target="_blank" href="https://www.google.co.uk/search?ei=QPGYW9aaD-yagAa824roDQ&q=site%3Aft.com+An+AI+genre+in+its+infancy+questions+the+nature+of+art">Financial Times, </a><a id=show target="_blank" href="https://www.vogue.in/content/is-artificial-intelligence-the-new-artist-we-need-to-watch-out-for/">Vogue India, </a><a id=show target="_blank" href="http://www.forbesindia.com/aperture/slideshow/artificial-intelligence-art-parenting-a-new-genre/51059/1">Forbes India, </a><a id=show target="_blank" href="https://www.thehindu.com/entertainment/art/the-poetics-of-metonymy/article24769019.ece">The Hindu, </a><a id=show target="_blank" href="https://www.fastcompany.com/90233582/ai-is-their-paintbrush-but-the-artwork-is-no-less-human">Fastcompany</a>
+<br><br>
+</p>
+
+
+
+
             <blockquote>
               <p class="quote" style="margin-top:0px;">Bloomberg New Contemporaries</p>
               <footer>September 2017 - March 2018</footer>
