--- a/about.html
+++ b/about.html
@@ -263,6 +263,7 @@
 
 						<div class="desktop-9 tablet-6 columns">
 							<h4>Talks / Workshops</h4> <br>
+							&#9716; Interfaces Monthly, (in collaboration with London Creative AI &amp; Barbican), The Trampery Republic March 2018
 							&#9716; AI, Computer Vision for Art, Architecture &amp; as a Creative Tool - (workshop/talk for 80 students), <a id=show target="_blank" href="http://www.chora.tu-berlin.de/">CHORA conscious city</a>, Institute for Architecture, <b>Technische Universität Berlin</b>. October 2017 <br>
 							&#9717; Latent Spaces, Dirty Datasets &amp; Autonomous Art - <b>Art &amp; Technology: Vienna</b>, September 2017 <br>
 							&#9718; <b>Ars Electronica</b>, AI Project Spaces: Artist Workshops - Postcity, Linz, Austria, September 2017 <br>
