--- a/project-closedLoop.html
+++ b/project-closedLoop.html
@@ -73,11 +73,12 @@
 	<section id="works" class="page single">
 		<div class="container">
 
-			<div class="desktop-3 push-9 tablet-12 tablet-push-0 nested columns">
+			<div class="desktop-3 push-6 tablet-12 tablet-push-0 nested columns">
 
-				<div class="sidebar">
+				<div class="sidebar sticky">
 
-					<div class="desktop-3 tablet-12 columns">
+					<div class="desktop-6 tablet-12 columns">
+					<!-- <div class="desktop-3 tablet-12 columns"> -->
 
 						<div class="box-info">
 							<h3 class="border-top">Closed Loop</h3>
@@ -85,15 +86,25 @@
 </p>
 
 							<p>
-Closed Loop is a recording of two artificial intelligence models conversing with each other - one with words the other with images - in a never-ending feedback loop. The words of one describe the images of the other, which then seeks to describe the words with a fresh image… Two neural networks getting lost in their own nuances, sparking and branching off each other as they converse in a perpetual game of AI "Exquisite Corpse".
-								<br><br><small> Collaborative project with <a id=show target="_blank" href="http://ouiouioui.space/">Roland Arnoldt</a>. Special thanks to <a id=show  target="_blank" href="http://anhnguyen.me/blog/">Anh Nguyen</a> et al. at <a id=show target="_blank" href="http://www.evolvingai.org/">Evolving-AI</a> for their work on GANs.</small>
+
+
+								“What happens when an AI that interprets images in words converses with another AI that interprets words in images? <i>‘Closed Loop’ has had no textual or visual input by the artist.</i>
+								Are the possibilities of comprehension and miscomprehension all that different from what happens when two humans, perhaps from different cultures, meet? Closed Loop works with two different algorithms to enable us to eavesdrop on this eerie conversation.  <br><br>
+								The conversation which shifts between the logical, to the enigmatic to the frankly incomprehensible, produces constant frissons of surprise and in the end a profound sense of displacement from one’s own settled perceptual self.” 
+
+								<br><br><small>Work description courtesy of <a id=show target="_blank" href="https://www.64bar1.com/">64/1</a>,
+
+<!-- Closed Loop is a recording of two artificial intelligence models conversing with each other - one with words the other with images - in a never-ending feedback loop. The words of one describe the images of the other, which then seeks to describe the words with a fresh image… Two neural networks getting lost in their own nuances, sparking and branching off each other as they converse in a perpetual game of AI "Exquisite Corpse". -->
+
+
+								<br> Collaborative project with <a id=show target="_blank" href="http://ouiouioui.space/">Roland Arnoldt</a>. Special thanks to <a id=show  target="_blank" href="http://anhnguyen.me/blog/">Anh Nguyen</a> et al. at <a id=show target="_blank" href="http://www.evolvingai.org/">Evolving-AI</a> for their work on GANs.</small>
 
 </p>
 						</div><!-- // .box-info -->
 
 					</div><!-- // .desktop-3 -->
 
-					<div class="desktop-3 tablet-12 columns">
+					<!-- <div class="desktop-3 tablet-12 columns">
 
 						<div class="box-info">
 							<h4 class="border-top">Technical</h4>
@@ -102,9 +113,9 @@ Two neural networks: a language captioning recurrent neural network writing what
 Two datasets to train the algorithms: a dataset of 4.1 million captioned images to train a language network, and the Imagenet dataset of 14.2 million photographs to train the image generator network.
 
 							</p>
-						</div><!-- // .box-info -->
+						</div>
 
-					</div><!-- // .desktop-3 -->
+					</div> -->
 
 					<div class="clear"></div>
 
@@ -113,7 +124,7 @@ Two datasets to train the algorithms: a dataset of 4.1 million captioned images 
 			</div><!-- // .desktop-3 .nested -->
 
 			<div class="clear show-under-tablet"></div>
-<div class="desktop-9 pull-3 tablet-12 tablet-pull-0 columns">
+<div class="desktop-6 pull-3 tablet-12 tablet-pull-0 columns">
 
 				<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 
@@ -131,9 +142,12 @@ Two datasets to train the algorithms: a dataset of 4.1 million captioned images 
 
 				<br></br>
 				<!-- <img src="images/project-closedLoop/1_granary_jake_elwes__043.jpg" alt="Jake Elwes digital artist" /> -->
-				<img src="images/project-closedLoop/IMG_0853.jpg" alt="Jake Elwes digital artist" />
-				<small>Installation shot of Closed Loop shown as two back projected suspended screens, Slade Degree Show 2017</small>
 				<img src="images/project-closedLoop/IMG_0852.jpg" alt="Jake Elwes digital artist" />
+				<small>Installation shot of Closed Loop shown as two back projected suspended screens, Slade Degree Show 2017</small>
+				<img src="images/project-closedLoop/naturemorte-5510-w1200-h800.jpg" alt="Jake Elwes digital artist" />
+				<small>Installation shot of Closed Loop shown as two projections, <a id=show target="_blank" href="http://naturemorte.com/exhibitions/gradientdescent/"> 'Gradient Descent', Nature Morte</a>, Delhi 2018</small>
+				<img src="images/project-closedLoop/IMG_0853.jpg" alt="Jake Elwes digital artist" />
+
 				<!-- <img src="images/project-closedLoop/IMG_0702.jpg" alt="Jake Elwes digital artist" /> -->
 
 
