--- a/about.html
+++ b/about.html
@@ -176,7 +176,12 @@
 						<div class="desktop-9 tablet-6 columns">
 							<h4>Current/Upcoming Shows</h4>
 							<p>
+								2018 - 25 Oct - <a id=show target="_blank" href="http://andwhatfest.com/digital-bodies">Digital Bodies</a>, <a id=show target="_blank" href="http://andwhatfest.com/">'and what?' - Queer Arts Festival 2018</a>, Candid Arts Trust, London <br>
+								2018 - 07 to 25 Nov - <a id=show target="_blank" href="https://loop-barcelona.com/city-screen/">City Sreen, Loop Barcelona 2018</a>, Barcelona <br>
+								2018 - 08 to 18 Nov - <a id=show target="_blank" href="https://www.eventbrite.com/e/creative-machine-2-pv-tickets-51113585109">The Creative Machine 2 (Cyland & Goldsmiths)</a>, Hatcham Church Galery, Goldsmiths University of London <br>
+
 							2018/19 - 01 Sept to 06 Jan – <a id=show target="_blank" href="https://open-codes.zkm.de/en"> Open Codes - Living in Digital Worlds</a>,  ZKM | Center for Art and Media, Karlsruhe, Germany<br>
+							<!-- 2018 - 31 Oct to 03 Sept <a id=show target="_blank" href="https://www.printscreenfestival.com/">Print Screen Festival</a>, Holon, Isreal <br> -->
 						</p>
 
 									</div><!-- // .desktop-6 -->
@@ -263,7 +268,7 @@
 
 						<div class="desktop-9 tablet-6 columns">
 							<h4>Talks / Workshops</h4> <br>
-							&#9716; Interfaces Monthly, (in collaboration with London Creative AI &amp; Barbican), The Trampery Republic March 2018
+							&#9716; <a id=show target="_blank" href="http://thetrampery.com/event/im032018/"> Interfaces Monthly 032018: Machine Learning</a>, (in collaboration with London Creative AI &amp; Barbican), The Trampery Republic, March 2018 <br>
 							&#9716; AI, Computer Vision for Art, Architecture &amp; as a Creative Tool - (workshop/talk for 80 students), <a id=show target="_blank" href="http://www.chora.tu-berlin.de/">CHORA conscious city</a>, Institute for Architecture, <b>Technische Universität Berlin</b>. October 2017 <br>
 							&#9717; Latent Spaces, Dirty Datasets &amp; Autonomous Art - <b>Art &amp; Technology: Vienna</b>, September 2017 <br>
 							&#9718; <b>Ars Electronica</b>, AI Project Spaces: Artist Workshops - Postcity, Linz, Austria, September 2017 <br>
