--- a/project-closedLoop.html
+++ b/project-closedLoop.html
@@ -88,9 +88,9 @@
 							<p>
 
 
-								“What happens when an AI that interprets images in words converses with another AI that interprets words in images? <i>‘Closed Loop’ has had no textual or visual input by the artist.</i>
-								Are the possibilities of comprehension and miscomprehension all that different from what happens when two humans, perhaps from different cultures, meet? Closed Loop works with two different algorithms to enable us to eavesdrop on this eerie conversation.  <br><br>
-								The conversation which shifts between the logical, to the enigmatic to the frankly incomprehensible, produces constant frissons of surprise and in the end a profound sense of displacement from one’s own settled perceptual self.” 
+								“What happens when an AI that interprets images in words converses with another AI that interprets words in images?
+								Are the possibilities of comprehension and miscomprehension all that different from what happens when two humans, perhaps from different cultures, meet? Closed Loop works with two different algorithms to enable us to eavesdrop on this eerie conversation. <i>Closed Loop has had no textual or visual input by the artist.</i>  <br><br>
+								The conversation which shifts between the logical, to the enigmatic to the frankly incomprehensible, produces constant frissons of surprise and in the end a profound sense of displacement from one’s own settled perceptual self.”
 
 								<br><br><small>Work description courtesy of <a id=show target="_blank" href="https://www.64bar1.com/">64/1</a>,
 
