--- a/about.html
+++ b/about.html
@@ -177,8 +177,8 @@
 							<h4>Current/Upcoming Shows</h4>
 							<p>
 								2018 - 25 Oct - <a id=show target="_blank" href="http://andwhatfest.com/digital-bodies">Digital Bodies</a>, <a id=show target="_blank" href="http://andwhatfest.com/">'and what?' - Queer Arts Festival 2018</a>, Candid Arts Trust, London <br>
-								2018 - 07 to 25 Nov - <a id=show target="_blank" href="https://loop-barcelona.com/city-screen/">City Sreen, Loop Barcelona 2018</a>, Barcelona <br>
-								2018 - 08 to 18 Nov - <a id=show target="_blank" href="https://www.eventbrite.com/e/creative-machine-2-pv-tickets-51113585109">The Creative Machine 2 (Cyland & Goldsmiths)</a>, Hatcham Church Galery, Goldsmiths University of London <br>
+								2018 - 07 to 25 Nov - <a id=show target="_blank" href="https://loop-barcelona.com/city-screen/">City Screen, Loop Barcelona 2018</a>, Barcelona <br>
+								2018 - 08 to 18 Nov - <a id=show target="_blank" href="https://www.eventbrite.com/e/creative-machine-2-pv-tickets-51113585109">The Creative Machine 2 (Cyland & Goldsmiths)</a>, Hatcham Church Gallery, Goldsmiths University of London <br>
 
 							2018/19 - 01 Sept to 06 Jan – <a id=show target="_blank" href="https://open-codes.zkm.de/en"> Open Codes - Living in Digital Worlds</a>,  ZKM | Center for Art and Media, Karlsruhe, Germany<br>
 							2018 - 31 Oct to 03 Sept <a id=show target="_blank" href="https://www.printscreenfestival.com/">Print Screen Festival</a>, Holon, Isreal <br>
