--- a/about.html
+++ b/about.html
@@ -136,8 +136,15 @@
 
 
 			<div class="desktop-12 tablet-12 columns" >
-				<p style="margin-top:0px;">Jake Elwes explores both Fine Art and Digital Code, often embracing the overlap between the two. Recent projects look at how we interact with technology and Artificial Intelligence.
-					Jake is currently currently working with Steve Fletcher at <a id=show target="_blank" href="https://www.theartistsdevelopmentagency.org">The Artist Development Agency</a></p>
+<!--
+				Jake Elwes explores both Fine Art and Digital Code, often embracing the overlap between the two. Recent projects look at how we interact with technology and Artificial Intelligence. -->
+
+
+					<p style="margin-top:0px;">Jake Elwes (UK), born 1993, is currently based in London. His recent works have looked at Artificial Intelligence, investigating the technology, philosophy and ethics behind it. Jake graduated with a BA in Fine Art from the Slade School of Fine Art (UCL), London in 2017, having also attended SAIC, Chicago (Erasmus), in 2016 and Central St Martins (foundation) in 2012 and is currently currently working with Steve Fletcher at <a id=show target="_blank" href="https://www.theartistsdevelopmentagency.org">The Artist Development Agency</a>. <br><br>Jake has exhibited in the UK and internationally, including Bloomberg New Contemporaries 2017, Newcastle & London, UK; Ars Electronica 2017, Linz, Austria; Victoria and Albert Museum, London, UK; City Loop, Barcelona, Spain; NIPS 2017, Long Beach, US; Nature Morte, Delhi, India; ZKM, Karlsruhe, Germany; Frankfurter Kunstverein, Germany and Centre for the Future of Intelligence (CFI), Cambridge, UK. </p>
+
+
+
+
 <br>Download: <a id=show target="_blank" href="JElwes-Portfolio.pdf">WORKS PDF</a> | <a id=show target="_blank" href="JElwes-CV.pdf">CV PDF</a>
 			</div>
 		</div><!-- // .container -->
@@ -169,19 +176,16 @@
 
 					<div class="item">
 						<div class="desktop-3 tablet-6 columns">
-							<!-- <img src="images/about_services04.png" alt=""> -->
+							<!-- <img src="images/about_services02.png" alt=""> -->
 							<p></p>
 						</div><!-- // .desktop-3 -->
 
 						<div class="desktop-9 tablet-6 columns">
 							<h4>Current/Upcoming Shows</h4>
 							<p>
-								2018 - 25 Oct - <a id=show target="_blank" href="http://andwhatfest.com/digital-bodies">Digital Bodies</a>, <a id=show target="_blank" href="http://andwhatfest.com/">'and what?' - Queer Arts Festival 2018</a>, Candid Arts Trust, London <br>
-								2018 - 07 to 25 Nov - <a id=show target="_blank" href="https://loop-barcelona.com/city-screen/">City Screen, Loop Barcelona 2018</a>, Barcelona <br>
-								2018 - 08 to 18 Nov - <a id=show target="_blank" href="https://www.eventbrite.com/e/creative-machine-2-pv-tickets-51113585109">The Creative Machine 2 (Cyland & Goldsmiths)</a>, Hatcham Church Gallery, Goldsmiths University of London <br>
 
 							2018/19 - 01 Sept to 06 Jan – <a id=show target="_blank" href="https://open-codes.zkm.de/en"> Open Codes - Living in Digital Worlds</a>,  ZKM | Center for Art and Media, Karlsruhe, Germany<br>
-							2018 - 31 Oct to 03 Sept <a id=show target="_blank" href="https://www.printscreenfestival.com/">Print Screen Festival</a>, Holon, Isreal <br>
+							<!-- 2019 -  Zabs, Shanghai, Beijing-->
 						</p>
 
 									</div><!-- // .desktop-6 -->
@@ -201,6 +205,10 @@
 
 							<h4>Group Shows</h4>
 							<p>
+							2018 - <a id=show target="_blank" href="https://www.eventbrite.com/e/creative-machine-2-pv-tickets-51113585109">The Creative Machine 2 (Cyland & Goldsmiths)</a>, Hatcham Church Gallery, Goldsmiths University of London <br>
+							2018 - <a id=show target="_blank" href="http://andwhatfest.com/digital-bodies">Digital Bodies</a>, <a id=show target="_blank" href="http://andwhatfest.com/">'and what?' - Queer Arts Festival 2018</a>, Candid Arts Trust, London <br>
+							2018 - <a id=show target="_blank" href="https://loop-barcelona.com/city-screen/">City Screen, Loop Barcelona 2018</a>, Barcelona <br>
+							2018 - <a id=show target="_blank" href="https://www.printscreenfestival.com/">Print Screen Festival</a>, Holon, Isreal <br>
 							2018 - <a id=show target="_blank" href="https://www.vam.ac.uk/event/6YVLW34q/digital-design-weekend-2018-ldf"> Digital Design Weekend</a>, Victoria and Albert Museum, London, UK<br>
 							2018 - <a id=show target="_blank" href="https://brightondigitalfestival.co.uk/events/lumen-prize-exhibition"> Uncommon Natures (Lumen Art Prize)</a>, Brighton Digital Festival, Phoenix Theatre, Brighton, UK<br>
 							2018 - <a id=show target="_blank" href="http://naturemorte.com/exhibitions/gradientdescent/"> Gradient Descent</a>, Nature Morte, Delhi, India<br>
