--- a/project-closedLoop.html
+++ b/project-closedLoop.html
@@ -88,16 +88,20 @@
 							<p>
 
 
-								“What happens when an AI that interprets images in words converses with another AI that interprets words in images?
-								Are the possibilities of comprehension and miscomprehension all that different from what happens when two humans, perhaps from different cultures, meet? Closed Loop works with two different algorithms to enable us to eavesdrop on this eerie conversation. <i>Closed Loop has had no textual or visual input by the artist.</i>  <br><br>
-								The conversation which shifts between the logical, to the enigmatic to the frankly incomprehensible, produces constant frissons of surprise and in the end a profound sense of displacement from one’s own settled perceptual self.”
+								Closed Loop is a recording of two artificial intelligence models conversing with each other - one with words the other with images - in a never-ending feedback loop. The words of one describe the images of the other, which then seeks to describe the words with a fresh image.<br><br>
 
-								<br><br><small>Work description courtesy of <a id=show target="_blank" href="https://www.64bar1.com/">64/1</a>,
+							“The conversation shifts between the logical, to the enigmatic to the frankly incomprehensible, produces constant frissons of surprise and in the end a profound sense of displacement from one’s own settled perceptual self.” - (<a id=show target="_blank" href="https://www.64bar1.com/">64/1</a>, curatorial collective) <br><br>
+
+							Closed Loop has had no textual or visual input by the artist. <br>
+
+					<!-- “What happens when an AI that interprets images in words converses with another AI that interprets words in images?
+					Are the possibilities of comprehension and miscomprehension all that different from what happens when two humans, perhaps from different cultures, meet? Closed Loop works with two different algorithms to enable us to eavesdrop on this eerie conversation. <i>Closed Loop has had no textual or visual input by the artist.</i>  <br><br>
+					The conversation which shifts between the logical, to the enigmatic to the frankly incomprehensible, produces constant frissons of surprise and in the end a profound sense of displacement from one’s own settled perceptual self.” -->
 
 <!-- Closed Loop is a recording of two artificial intelligence models conversing with each other - one with words the other with images - in a never-ending feedback loop. The words of one describe the images of the other, which then seeks to describe the words with a fresh image… Two neural networks getting lost in their own nuances, sparking and branching off each other as they converse in a perpetual game of AI "Exquisite Corpse". -->
 
 
-								<br> Collaborative project with <a id=show target="_blank" href="http://ouiouioui.space/">Roland Arnoldt</a>. Special thanks to <a id=show  target="_blank" href="http://anhnguyen.me/blog/">Anh Nguyen</a> et al. at <a id=show target="_blank" href="http://www.evolvingai.org/">Evolving-AI</a> for their work on GANs.</small>
+								<small><br> Special thanks to <a id=show target="_blank" href="http://ouiouioui.space/">Roland Arnoldt</a>, and <a id=show  target="_blank" href="http://anhnguyen.me/blog/">Anh Nguyen</a> et al. at <a id=show target="_blank" href="http://www.evolvingai.org/">Evolving-AI</a> for their work on GANs.</small>
 
 </p>
 						</div><!-- // .box-info -->
